# cneuromax

./: .buildinfo  .devcontainer.json  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Containerfile  Contribution.html  Dockerfile  Execution.html  Execution_On_a_Slurm_cluster.html  Execution_On_an_Ubuntu_machine.html  Installation.html  Installation_Common_to_all_machines.html  Installation_On_a_Slurm_cluster.html  Installation_On_an_Ubuntu_machine.html  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  renovate.json  renovate.json.info  search.html  searchindex.js  test.yaml
.devcontainer/: .env  devcontainer.json
.doctrees/: Contribution.doctree  Execution.doctree  Execution_On_a_Slurm_cluster.doctree  Execution_On_an_Ubuntu_machine.doctree  Installation.doctree  Installation_Common_to_all_machines.doctree  Installation_On_a_Slurm_cluster.doctree  Installation_On_an_Ubuntu_machine.doctree  environment.pickle  index.doctree
.doctrees/_autosummary/: cneuromax.config.doctree  cneuromax.doctree  cneuromax.fitting.config.doctree  cneuromax.fitting.deeplearning.config.doctree  cneuromax.fitting.deeplearning.datamodule.base.doctree  cneuromax.fitting.deeplearning.datamodule.doctree  cneuromax.fitting.deeplearning.doctree  cneuromax.fitting.deeplearning.litmodule.base.doctree  cneuromax.fitting.deeplearning.litmodule.classification.base.doctree  cneuromax.fitting.deeplearning.litmodule.classification.doctree  cneuromax.fitting.deeplearning.litmodule.doctree  cneuromax.fitting.deeplearning.litmodule.nnmodule.doctree  cneuromax.fitting.deeplearning.litmodule.nnmodule.mlp.doctree  cneuromax.fitting.deeplearning.litmodule.store.doctree  cneuromax.fitting.deeplearning.litmodule.wandb_val_logging.doctree  cneuromax.fitting.deeplearning.runner.doctree  cneuromax.fitting.deeplearning.store.doctree  cneuromax.fitting.deeplearning.train.doctree  cneuromax.fitting.deeplearning.utils.doctree  cneuromax.fitting.deeplearning.utils.lightning.doctree  cneuromax.fitting.deeplearning.utils.type.doctree  cneuromax.fitting.deeplearning.utils.typing.doctree  cneuromax.fitting.deeplneuroevo.doctree  cneuromax.fitting.doctree  cneuromax.fitting.neuroevolution.agent.base.doctree  cneuromax.fitting.neuroevolution.agent.doctree  cneuromax.fitting.neuroevolution.config.doctree  cneuromax.fitting.neuroevolution.doctree  cneuromax.fitting.neuroevolution.evolve.doctree  cneuromax.fitting.neuroevolution.fit.doctree  cneuromax.fitting.neuroevolution.net.cpu.doctree  cneuromax.fitting.neuroevolution.net.cpu.static.doctree  cneuromax.fitting.neuroevolution.net.cpu.static.rnnfc.doctree  cneuromax.fitting.neuroevolution.net.doctree  cneuromax.fitting.neuroevolution.runner.doctree  cneuromax.fitting.neuroevolution.space.base.doctree  cneuromax.fitting.neuroevolution.space.doctree  cneuromax.fitting.neuroevolution.space.reinforcement.doctree  cneuromax.fitting.neuroevolution.utils.compute.doctree  cneuromax.fitting.neuroevolution.utils.compute_test.doctree  (+33 more)
.github/: CODEOWNERS
.github/workflows/: container-build-push.yaml  container-build.yaml  docker-build-push.yaml  docker-build.yaml  (+7 more)
_autosummary/: cneuromax.config.html  cneuromax.fitting.config.html  cneuromax.fitting.deeplearning.config.html  cneuromax.fitting.deeplearning.datamodule.base.html  cneuromax.fitting.deeplearning.datamodule.html  cneuromax.fitting.deeplearning.html  cneuromax.fitting.deeplearning.litmodule.base.html  cneuromax.fitting.deeplearning.litmodule.classification.base.html  cneuromax.fitting.deeplearning.litmodule.classification.html  cneuromax.fitting.deeplearning.litmodule.html  cneuromax.fitting.deeplearning.litmodule.nnmodule.html  cneuromax.fitting.deeplearning.litmodule.nnmodule.mlp.html  cneuromax.fitting.deeplearning.litmodule.store.html  cneuromax.fitting.deeplearning.litmodule.wandb_val_logging.html  cneuromax.fitting.deeplearning.runner.html  cneuromax.fitting.deeplearning.store.html  cneuromax.fitting.deeplearning.train.html  cneuromax.fitting.deeplearning.utils.html  cneuromax.fitting.deeplearning.utils.lightning.html  cneuromax.fitting.deeplearning.utils.type.html  cneuromax.fitting.deeplearning.utils.typing.html  cneuromax.fitting.deeplneuroevo.html  cneuromax.fitting.html  cneuromax.fitting.neuroevolution.agent.base.html  cneuromax.fitting.neuroevolution.agent.html  cneuromax.fitting.neuroevolution.config.html  cneuromax.fitting.neuroevolution.evolve.html  cneuromax.fitting.neuroevolution.fit.html  cneuromax.fitting.neuroevolution.html  cneuromax.fitting.neuroevolution.net.cpu.html  cneuromax.fitting.neuroevolution.net.cpu.static.html  cneuromax.fitting.neuroevolution.net.cpu.static.rnnfc.html  cneuromax.fitting.neuroevolution.net.html  cneuromax.fitting.neuroevolution.runner.html  cneuromax.fitting.neuroevolution.space.base.html  cneuromax.fitting.neuroevolution.space.html  cneuromax.fitting.neuroevolution.space.reinforcement.html  cneuromax.fitting.neuroevolution.utils.compute.html  cneuromax.fitting.neuroevolution.utils.compute_test.html  cneuromax.fitting.neuroevolution.utils.evolve.html  (+33 more)
_modules/: index.html
_sources/: Execution.rst.txt  Execution_On_an_Ubuntu_machine.rst.txt  Installation.rst.txt  index.rst.txt
_static/: paramlink_target_color.css
cneuromax/: __init__.py  __main__.py  base_config.yaml  config.py  runner.py  store.py
cneuroml/: __init__.py  conftest.py
docs/: Contribution.rst  Execution.rst  Execution_On_a_Linux_machine.rst  Execution_On_a_Slurm_cluster.rst  Execution_On_an_Ubuntu_machine.rst  Installation.rst  Installation_Common_to_all_machines.rst  Installation_On_a_Linux_machine.rst  Installation_On_a_Slurm_cluster.rst  Installation_On_an_Ubuntu_machine.rst  __init__.py  conf.py  index.rst  requirements.txt
pyreqs/: computer_vision.txt  core.txt  core_testing.txt  deep_learning.txt  dev.txt  dl.txt  dl_testing.txt  documentation.txt  hpo.txt  hydra_extensions.txt  hydra_run.txt  hydra_test.txt  hyperparameters.txt  jupyter.txt  ne.txt  neuroevolution.txt  shapes.txt  slurm.txt  test.txt  testing.txt  utils.txt  vision.txt  wandb.txt
(+666 files in other folders)
